2021-05-23  David Turner  <david@freetype.org>

	* src/ftmemchk.c: Remove minor compiler warning.

	Casting a pointer to (long) isn't always correct.

2021-05-23  David Turner  <david@freetype.org>

	* src/ftpngout.c: Remove compiler warning for Mingw64 toolchain.

	The #pragma statement is only valid with Microsoft Visual C++

2021-05-23  David Turner  <david@freetype.org>

	* graph/win32/grwin32.c: Fix compiler warnings.

	- Redefine the LCS_sRGB macro to properly compile with the Mingw64
	 toolchain and the -Wmultichar warning enabled.

	- Add missing return code paths in function.

2021-05-22  David Turner  <david@freetype.org>

	* src/ftbench.c: Fix get_time() for Mingw64.

	clock_gettime() cannot be used when cross-compiling for Windows
	using the Linux Mingw64 toolchain, so ensure the Win32-specific
	timer code is always used when _WIN32 is defined.

2021-05-24  David Turner  <david@freetype.org>

	[build] Add Meson build files and documentation.

	This commit adds files necessary to build the demo programs,
	including `ftinspect`, with the Meson build system.

	* meson.build, graph/meson.build, src/ftinspect/meson.build: New
	build files for Meson.
	* subprojects/freetype2.wrap, subprojects/libpng.wrap,
	subprojects/zlib.wrap: New subproject files for Meson.
	* README.meson: New file.
	* README, .gitignore: Updated.

2021-05-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile (LINK_LIBS): Add `-lgdiplus' for PNG saving on Windows.

	Reported by Anuj Verma.

2021-04-30  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (Print_Charmaps): Add hexadecimal FNT charset.

2021-04-30  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (Print_Charmaps): Add PCF/BDF/FNT charset info.

2021-04-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/rules.mk: Warn about missing graphics driver.

2021-03-30  orbea  <orbea@riseup.net>

	[build] Add an `install` target for binaries and man pages.

	* Makefile (MANPAGES): New variable.